--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.manav.log">
-    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
+
+    <uses-permiss android:name="android.permission.INTERNET"/>
 
     <application
         android:allowBackup="true"
@@ -19,7 +20,7 @@
         </activity>
         <activity android:name=".SecondActivity" />
         <activity android:name=".RegistrationActivity" />
-        <activity android:name=".PasswordActivity"></activity>
+        <activity android:name=".PasswordActivity" />
     </application>
 
 </manifest>
